using UnityEngine;

public class PlayerMovement : MonoBehaviour
{
    public float walkSpeed = 1.5f;
    public float runSpeed = 4f;

    public Transform cam;  // â­ ì¹´ë©”ë¼ ê¸°ì¤€ ì´ë™ í•„ìˆ˜
    public SwordHitbox swordHitbox;

    private Animator anim;
    private bool isAttacking = false;

    void Start()
    {
        anim = GetComponent<Animator>();
    }

    void Update()
{
    // ê³µê²© ì¤‘ì´ë©´ ì´ë™ ì• ë‹ˆ ì ê¸ˆ + ì‹¤ì œ ì´ë™ë„ ì ê¸ˆ
    if (isAttacking)
    {
        anim.SetFloat("Horizontal", 0);
        anim.SetFloat("Vertical", 0);
        anim.SetFloat("Blend", 0);
        return; // ì´ë™ ìì²´ë¥¼ ë©ˆì¶¤
    }

    HandleMovement();

    if (Input.GetMouseButtonDown(0))
        Attack();
}



    // ---------------------------------------
    // â­ ì†Œìš¸ë¥˜ ì¹´ë©”ë¼ ê¸°ì¤€ ì´ë™
    // ---------------------------------------
    void HandleMovement()
    {
        float h = Input.GetAxisRaw("Horizontal");
        float v = Input.GetAxisRaw("Vertical");

        anim.SetFloat("Horizontal", h);
        anim.SetFloat("Vertical", v);

        bool isRunning = Input.GetKey(KeyCode.LeftShift);
        anim.SetBool("IsRunning", isRunning);

        float speed = isRunning ? runSpeed : walkSpeed;


        // ğŸ”¥ ì¹´ë©”ë¼ ë°©í–¥ ê¸°ì¤€ ì´ë™ ë²¡í„° ë§Œë“¤ê¸°
        Vector3 camForward = cam.forward;
        Vector3 camRight = cam.right;

        camForward.y = 0;
        camRight.y = 0;

        camForward.Normalize();
        camRight.Normalize();

        // ì´ë™ ë°©í–¥ = ì¹´ë©”ë¼ ê¸°ì¤€ìœ¼ë¡œ ë³€í™˜
        Vector3 dir = (camForward * v + camRight * h).normalized;

        // ì´ë™ + ë¶€ë“œëŸ¬ìš´ íšŒì „
        if (dir.magnitude > 0)
        {
            Quaternion targetRot = Quaternion.LookRotation(dir);
            transform.rotation = Quaternion.Slerp(transform.rotation, targetRot, Time.deltaTime * 10f);

            transform.position += dir * speed * Time.deltaTime;
        }

        anim.SetFloat("Blend", Mathf.Clamp01(new Vector2(h, v).magnitude));
    }


    // ---------------------------------------
    // ğŸ”¥ ê³µê²© ì…ë ¥ ì²˜ë¦¬
    // ---------------------------------------
    void HandleAttack()
    {
        if (Input.GetMouseButtonDown(0))
        {
            Attack();
        }
    }

    void Attack()
    {
        if (isAttacking) return;

        isAttacking = true;
        anim.SetBool("Attack", true);

        // íˆíŠ¸ë°•ìŠ¤ ON
        if (swordHitbox != null)
            swordHitbox.EnableHitbox();
    }


    // ---------------------------------------
    // ğŸ”¥ ì• ë‹ˆë©”ì´ì…˜ ì´ë²¤íŠ¸ â€” íˆíŠ¸ë°•ìŠ¤ ì œì–´
    // ---------------------------------------
    public void EnableHitbox()
    {
        if (swordHitbox != null)
            swordHitbox.EnableHitbox();
    }

    public void DisableHitbox()
    {
        if (swordHitbox != null)
            swordHitbox.DisableHitbox();
    }


    // ---------------------------------------
    // ğŸ”¥ ê³µê²© ì¢…ë£Œ ì´ë²¤íŠ¸ â€” Idleë¡œ ìì—°ìŠ¤ëŸ½ê²Œ ë³µê·€
    // ---------------------------------------
   public void OnAttackEnd()
{
    isAttacking = false;
    anim.SetBool("Attack", false);
}

}















